Fixed center div alignment issues

--- a/styles.css
+++ b/styles.css
@@ -115,10 +115,6 @@ h1 {
 .footer a {
   margin-left: 20px; /* Adjust as needed for spacing between icons */
 }
-.dialog {
-    font-size: 18px;
-    width: 50%;
-}
 .w3-input {
   padding-top: 20px;
   /* padding-bottom: 20px; */
@@ -128,11 +124,29 @@ h1 {
   width: 100%;
   font-size: 18px;
 }
-div[contenteditable]{
+*:focus {
+  outline: none;
+}
+textarea{
     padding-top: 20px;
     border-bottom: 1px solid #ccc;
     height: 20vh;
-    max-width: 100%;
-    max-height: 50vh;
     overflow: auto;
+}
+.dialog{
+  padding: 10px;
+  position: fixed;  /* Use fixed or absolute position */
+  top: 50%;         /* Position the top edge of the div in the middle of the screen */
+  left: 50%;        /* Position the left edge of the div in the middle of the screen */
+  width: 500px;
+  height: 450px;
+  transform: translate(-50%, -50%); 
+  font-size: 20px;
+}
+.dialog-in{
+  display: block;
+}
+.dialog-buttons{
+  display: flex;
+  justify-content: space-around;
 }
